# vulkan-renderer

./: .gitignore  CMakeLists.txt  CMakePresets.json  dependencies.cmake
.github/actions/cache-cmake/: action.yml
.github/actions/cmake-cache/: action.yml
.github/actions/set-build-version/: action.yml
.github/actions/setup-linux/: action.yml
.github/actions/setup-windows/: action.yml
.github/workflows/: add_labels.yml  build.yml  build_documentation.yml  code_style.yml  documentation.yml  linux_builds.yml  nightly-release.yml  nightly_release.yml  publish.yml  release.yml  runner.yml  static_analysis.yml  windows_builds.yml
benchmarks/: CMakeLists.txt
cmake/toolchains/: linux-clang.cmake  linux-gcc.cmake  windows-clang.cmake
documentation/: CMakeLists.txt
documentation/source/: getting-started.rst
documentation/source/engine-overview/cpp/: design-patterns.rst
example-app/: CMakeLists.txt  application.cpp  application.hpp  renderer.hpp
include/inexor/vulkan-renderer/: imgui.hpp  renderer.hpp
include/inexor/vulkan-renderer/render-graph/: buffer.hpp  graphics_pass.hpp  graphics_pass_builder.hpp  render_graph.hpp  texture.hpp
include/inexor/vulkan-renderer/wrapper/: device.hpp
include/inexor/vulkan-renderer/wrapper/commands/: command_buffer.hpp
include/inexor/vulkan-renderer/wrapper/descriptors/: descriptor_set_layout_builder.hpp
include/inexor/vulkan-renderer/wrapper/pipelines/: graphics_pipeline.hpp  graphics_pipeline_builder.hpp
include/inexor/vulkan-renderer/wrapper/swapchains/: swapchain.hpp
shaders/: CMakeLists.txt
src/: CMakeLists.txt
src/vulkan-renderer/: application.cpp  imgui.cpp  settings_decision_maker.cpp
src/vulkan-renderer/render-graph/: buffer.cpp  graphics_pass.cpp  graphics_pass_builder.cpp  render_graph.cpp  texture.cpp
src/vulkan-renderer/vk_tools/: gpu_info.cpp
src/vulkan-renderer/wrapper/: device.cpp  gpu_texture.cpp  swapchain.cpp
src/vulkan-renderer/wrapper/commands/: command_buffer.cpp
src/vulkan-renderer/wrapper/pipelines/: graphics_pipeline.cpp  graphics_pipeline_builder.cpp  pipeline_cache.cpp
src/vulkan-renderer/wrapper/swapchains/: swapchain.cpp
tests/: CMakeLists.txt
